# google-scholar-beautifulsoup

./: README.md  pyproject.toml
app/src/: app_containers.py  config.ini  config.ini.bckp  main.py
app/src/domain/: search_result.py
app/src/server/: main.py
app/src/server/crud/: search_result.py  subject.py
app/src/server/models/: search_result.py  search_result_collection.py  subject_collection.py
app/src/server/routers/: search_results.py  subjects.py
app/src/services/: email_service.py  parse_service.py  rabbitmq_service.py  search_DOI_service.py
